Fix picture jumping on hover
The border was causing the jumpiness.

--- a/public/app.css
+++ b/public/app.css
@@ -110,17 +110,14 @@ img {
 
 .Republican.hover {
   background: red;
-  border: solid 1px #999;
 }
 
 .Democrat.hover {
   background: blue;
-  border: solid 1px #999;
 }
 
 .hover {
   background: yellow;
-  border: solid 1px #999;
   cursor: pointer;
 }
 
